# OpenrouterRequests

./: .gitignore  README.md  pyproject.toml
openrouter_requests/: __init__.py  schemas.py
openrouter_requests/ChromaDB/: __init__.py  vector_base.py
openrouter_requests/ContextStorage/: BaseContextManager.py  ContextManagerDict.py  ContextManagerLinear.py  __init__.py
openrouter_requests/OpenRouter/: OpenRouter.py  __init__.py
openrouter_requests/RequestBuilder/: BaseRequestBuilder.py  OpenrouterRequestBuilder.py  __init__.py
openrouter_requests/ResponseParser/: BaseResponseParser.py  OpenRouterResponseParser.py  __init__.py
openrouter_requests/SpeechToTextModule/: VoskTranscriber.py  __init__.py
openrouter_requests/TextToSpeechModule/: SnakersModule.py  __init__.py
openrouter_requests/ToolsModule/: __init__.py  create_tool.py  tool_runner.py
openrouter_requests/TransportModule/: BaseTransport.py  __init__.py  httpx_processor.py
