[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openrouter-requests"
version = "0.1.0"
description = "Utility for automation RAG system on OpenRouter"
authors = [
    {name = "Alex", email = "sasandro85@mail.ru"}
]
license = "MIT"
requires-python = ">=3.12"

dependencies = [
    "httpx>=0.24.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "chromadb>=0.4.0",
    "sentence-transformers>=2.2.0",
    "aiohttp>=3.8.0",
    "vosk>=0.3.45",
    "omegaconf>=2.3.0",
    "torch>=2.0.0",
    "numpy>=1.24.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["openrouter_requests", "openrouter_requests.*"]